--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<img src="assets/img/started-bg.jpg" alt="" data-parallax>
 			</div>
 
-			<header class="header gsap" data-animation="fadeInDown" data-delay="0.500">
+			<header class="header gsap" data-animation="fadeIn" data-delay="0.500">
 				<a href="/" class="header-logo">
 					<div class="header-logo__img">
 						<img src="assets/img/logo-img.png" alt="">
