--- a/index.html
+++ b/index.html
@@ -183,14 +183,18 @@
 			</header>
 
 			<section class="started">
-				<div class="text-h4 text-md-h1 text-lg-h0 font-alt started__title mb-7 gsap" data-animation="fadeInUp" data-delay="0.500">
+				<div class="text-h4 text-md-h1 text-lg-h0 font-alt started__title mb-7 gsap" data-animation="fadeInUp"
+					data-delay="0.500">
 					Отрадненский историко- <br>
 					археологический музей
 				</div>
 				<div class="text-body-1 started__subtitle gsap" data-animation="fadeInUp" data-delay="0.500">
 					Одно из лучших муниципальных учреждений культуры Кубани,
 				</div>
-				<button class="started__btn btn btn--white-bg mt-10 gsap" data-animation="fadeInUp" data-delay="0.500">Больше о музее</button>
+				<div class="mt-10 gsap" data-animation="fadeInUp" data-delay="0.500">
+					<button class="started__btn btn btn--white-bg ">Больше о музее</button>
+
+				</div>
 			</section>
 
 
@@ -202,8 +206,10 @@
 		<!-- Что посмотреть -->
 		<section class="whatsee section--whithtop">
 			<div class="section__top">
-				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 mb-4 font-alt gsap-scroll" data-animation="fadeInUp">Что посмотреть</div>
-				<div class="whatsee__subtitle text-body-2 text-md-body-0 fade-60 gsap-scroll" data-animation="fadeInUp">Мы к вашим услугам</div>
+				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 mb-4 font-alt gsap-scroll" data-animation="fadeInUp">
+					Что посмотреть</div>
+				<div class="whatsee__subtitle text-body-2 text-md-body-0 fade-60 gsap-scroll" data-animation="fadeInUp">Мы к
+					вашим услугам</div>
 			</div>
 			<div class="whatsee__grid">
 				<div class="whatsee__item card p-lg-4 p-2 link-hover-wrapper waved gsap-scroll" data-animation="fadeInLeft">
@@ -250,7 +256,8 @@
 		<!-- История музея -->
 		<div class="index-history-background">
 			<div class="index-history-background__img">
-				<img src="assets/img/index-history-bg.png" alt="" class="gsap-scroll" data-animation="fadeInRight" data-end="bottom 100px">
+				<img src="assets/img/index-history-bg.png" alt="" class="gsap-scroll" data-animation="fadeInRight"
+					data-end="bottom 100px">
 			</div>
 
 			<section class="index-history">
@@ -358,7 +365,8 @@
 		<!-- Медиа -->
 		<section class="media media-index">
 			<div class="section__top">
-				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 font-alt gsap-scroll" data-animation="fadeInLeft">Медиа</div>
+				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 font-alt gsap-scroll" data-animation="fadeInLeft">Медиа
+				</div>
 			</div>
 
 			<div class="media__grid">
