add articles & plan pages

--- a/plan.html
+++ b/plan.html
@@ -19,7 +19,7 @@
 
 
 
-  <title>Статьи - Отрадненский музей </title>
+  <title>Спланировать визит - Отрадненский музей </title>
 </head>
 
 <body class="bg-l3">
@@ -184,112 +184,71 @@
       <div class="page-header__inner">
         <div class="page-header__breadcrumps text-small fade-60">
           <a href="javascript:;" class="link-hover">Главная</a> >
-          Статьи
+          Спланировать визит
         </div>
-        <div class="page-header__title text-h4 text-md-h1 text-lg-h0 font-alt">Статьи</div>
+        <div class="page-header__title text-h4 text-md-h1 text-lg-h0 font-alt">Спланировать визит</div>
       </div>
     </section>
 
   </div>
 
   <section class="section--whithtop-min">
+    <div class="text-lg-h4 text-subtitle-1 mb-lg-8 mb-5 font-alt">Часы работы</div>
+    <div class="card p-4 p-md-8 mb-10">
+      <div class="card-content p-0">  
+        <div class="text-lg-body-0 text-body-1 text--demibold mb-lg-7 mb-5 font-alt">Экспозиции и стационарные выставки</div>
 
-    <div class="grid grid-spacing-lg-9">
-      <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
-          <div class="card-content">
-            <div class="text-body-0 text--demibold font-alt link-hover">
-              9 сентября – День памяти
-              русских воинов, павших
-              при обороне Севастополя
-            </div>
-            <div class="bd-bottom mb-4 mt-4 w-100 bd-dotted bd-2"></div>
-            <div class="text-body-1 fade-60 mb-auto">
-              9 сентября в городе-герое отмечается День памяти воинов, павших в Крымской войне 1853–1856 годов, а также
-              окончание I героической обороны Севастополя (1855 год)...
-            </div>
-            <button class="btn btn--primary btn--link mt-6">
-              Подробнее
-              <svg class="icon ml-2">
-                <use xlink:href="assets/img/icons.svg#arrow-right" />
-              </svg>
-            </button>
-          </div>
+        <div class="flex flex-align-center mb-4">
+          <svg class="icon color-primary text-body-0"><use xlink:href="assets/img/icons.svg#calendar-1" /></svg>
+          <div class="text-md-body-1 text-body-2 ml-3">Понедельник – пятница с 8:00 до 17:00 (допуск прекращается в 16:30)</div>
         </div>
-      </div>
-      <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
-          <div class="card-content">
-            <div class="text-body-0 text--demibold font-alt link-hover">
-              9 сентября – День памяти
-              русских воинов, павших
-              при обороне Севастополя
-            </div>
-            <div class="bd-bottom mb-4 mt-4 w-100 bd-dotted bd-2"></div>
-            <div class="text-body-1 fade-60 mb-auto">
-              9 сентября в городе-герое отмечается День памяти воинов, павших в
-            </div>
-            <button class="btn btn--primary btn--link mt-6">
-              Подробнее
-              <svg class="icon ml-2">
-                <use xlink:href="assets/img/icons.svg#arrow-right" />
-              </svg>
-            </button>
-          </div>
+        <div class="flex flex-align-center mb-8">
+          <svg class="icon color-primary text-body-0 fade-60"><use xlink:href="assets/img/icons.svg#calendar" /></svg>
+          <div class="text-md-body-1 text-body-2 ml-3">Суббота, воскресенье – выходной</div>
         </div>
-      </div>
-      <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
-          <div class="card-content">
-            <div class="text-body-0 text--demibold font-alt link-hover">
-              9 сентября – День памяти
-              русских воинов, павших
-              при обороне Севастополя
-            </div>
-            <div class="bd-bottom mb-4 mt-4 w-100 bd-dotted bd-2"></div>
-            <div class="text-body-1 fade-60 mb-auto">
-              9 сентября в городе-герое отмечается День памяти воинов, павших в Крымской войне 1853–1856 годов, а также
-              окончание I героической обороны Севастополя (1855 год)...
-            </div>
-            <button class="btn btn--primary btn--link mt-6">
-              Подробнее
-              <svg class="icon ml-2">
-                <use xlink:href="assets/img/icons.svg#arrow-right" />
-              </svg>
-            </button>
-          </div>
+        <div class="flex flex-align-center">
+          <svg class="icon color-primary text-body-0"><use xlink:href="assets/img/icons.svg#book-check" /></svg>
+          <div class="text-md-body-1 text-body-2 ml-3">По предварительной заявке (не менее чем за 7 дней) возможно обслуживание в иное время</div>
         </div>
-      </div>
-      <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
-          <div class="card-content">
-            <div class="text-body-0 text--demibold font-alt link-hover">
-              9 сентября – День памяти
-              русских воинов, павших
-              при обороне Севастополя
-            </div>
-            <div class="bd-bottom mb-4 mt-4 w-100 bd-dotted bd-2"></div>
-            <div class="text-body-1 fade-60 mb-auto">
-              9 сентября в городе-герое отмечается День памяти воинов, павших в Крымской войне 1853–1856 годов, а также
-              окончание I героической обороны Севастополя (1855 год)...
-            </div>
-            <button class="btn btn--primary btn--link mt-6">
-              Подробнее
-              <svg class="icon ml-2">
-                <use xlink:href="assets/img/icons.svg#arrow-right" />
-              </svg>
-            </button>
-          </div>
+
+        <div class="py-4 px-6 bg-l1 brs-3 text--medium mt-7">
+          Организованные группы обслуживаются по заявкам (не менее чем за 3 дня)
         </div>
       </div>
     </div>
 
-    <div class="pagination flex mt-lg-10 mt-5">
-      <button class="btn btn-small btn-icon btn--primary btn--fill"> 1 </button>
-      <button class="btn btn-small btn-icon ml-lg-4 ml-md-3 ml-2 btn--color-icon btn--contur"><span
-          class="color-text fade-60">2</span></button>
-      <button class="btn btn-small btn-icon ml-lg-4 ml-md-3 ml-2 btn--color-icon btn--contur"><span
-          class="color-text fade-60">2</span></button>
+    <div class="grid">
+      <div class="grid-col-lg-5">
+        <div class="text-subtitle-1 text-lg-h4 mb-lg-7 mb-5 font-alt">Как добраться</div>
+        <div class="text-lg-body-0 text-body-1 text--demibold mb-lg-7 mb-5 font-alt">На общественном транспорте</div>
+        <div class="flex flex-align-center mb-4">
+          <svg class="icon color-primary text-body-0"><use xlink:href="assets/img/icons.svg#flag" /></svg>
+          <div class="text-body-1 ml-3">Остановка: Центр детского творчества</div>
+        </div>
+        <div class="flex flex-align-center mb-4">
+          <svg class="icon color-primary text-body-0"><use xlink:href="assets/img/icons.svg#bus" /></svg>
+          <div class="text-body-1 ml-3">Маршрутки № 1, 6, 7, 9, 10, 11</div>
+        </div>
+      </div>
+      <div class="grid-col-lg-7">
+        <div class="text-subtitle-1 text-lg-h4 mb-lg-7 mb-5 font-alt">Парковка и вход</div>
+        <div class="text-body-1 text--demibold">Входная группа расположена</div>
+        <div class="text-body-1">Центральная – на улице Первомайской 22</div>
+        <div class="text-body-1 text--demibold mt-5">Припарковаться можно</div>
+        <div class="text-body-1">Возле центральной входной группы (на улице Комарова)</div>
+
+      </div>
+    </div>
+
+    
+    <div class="text-lg-h4 text-subtitle-1 mb-lg-8 mb-5 font-alt mt-10">Покупка билетов</div>
+    <div class="card p-8">
+      <div class="text-lg-body-0 text-body-1 text--demibold mb-lg-7 mb-5 font-alt">Билеты можно приобрести:</div>
+      <ul class="text-ul">
+        <li class="text-ul-item">В кассе музея</li>
+        <li class="text-ul-item"><span>На сайте <a class="link-hover" href="http://отрадненскиймузей.рф">http://отрадненскиймузей.рф</a></span></li>
+        <li class="text-ul-item">На маркетплейсе</li>
+      </ul>
     </div>
   </section>
 
