add museum for page

--- a/museum-for.html
+++ b/museum-for.html
@@ -213,12 +213,14 @@
 
 		<div data-tab-cover="">
 
-			<div class="tab-links mb-10">
-				<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-g434f3">Выставки</button>
-				<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-fs4wq3">Экскурсии</button>
-				<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-ju8k99">Экспозиции</button>
-				<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-low02l">Другие мероприятия</button>
-				<div class="tab-links__plate" data-tab-plate></div>
+			<div class="tab-links-wrapper mb-lg-10 mb-6">
+				<div class="tab-links">
+					<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-g434f3">Выставки</button>
+					<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-fs4wq3">Экскурсии</button>
+					<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-ju8k99">Экспозиции</button>
+					<button class="tab-links__item btn btn--primary" data-tab-link="unique-id-low02l">Другие мероприятия</button>
+					<div class="tab-links__plate" data-tab-plate></div>
+				</div>
 			</div>
 
 			<div class="tab-content-cover">
