new images page history

--- a/history.html
+++ b/history.html
@@ -204,17 +204,17 @@
 
     <div class="grid grid-spacing-lg-9 mb-10">
       <div class="grid-col-6">
-        <a href="https://picsum.photos/1920/1080?random=11" data-fancybox="gallery-1"
+        <a href="assets/img/history-img-3.jpg" data-fancybox="gallery-1"
           class="image image--hover image--rect waved brs-1 bg-l1 progress-container">
           <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=11" alt="">
+          <img src="assets/img/history-1.png" alt="">
         </a>
       </div>
       <div class="grid-col-6">
-        <a href="https://picsum.photos/1920/1080?random=12" data-fancybox="gallery-1"
+        <a href="assets/img/started-bg.jpg" data-fancybox="gallery-1"
           class="image image--hover image--rect waved brs-1 bg-l1 progress-container">
           <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=12" alt="">
+          <img src="assets/img/history-2.png" alt="">
         </a>
       </div>
     </div>
@@ -223,13 +223,13 @@
 
     <div class="grid grid-spacing-lg-9 mb-10">
       <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
+        <div class="card h-100 waved">
           <div class="card-img image--box progress-container bg-l2">
             <div class="progress progress-circle"></div>
             <img src="assets/img/scientists-1.png" alt="">
           </div>
           <div class="card-content pt-3 pt-md-5 px-2 px-md-4 px-lg-7 pb-5 pb-md-8">
-            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8 link-hover">
+            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8">
               Галигоров <br>
               Николай Николаевич
             </div>
@@ -240,13 +240,13 @@
         </div>
       </div>
       <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
+        <div class="card h-100 waved">
           <div class="card-img image--box  progress-container bg-l2">
             <div class="progress progress-circle"></div>
             <img src="assets/img/scientists-2.png" alt="">
           </div>
           <div class="card-content pt-3 pt-md-5 px-2 px-md-4 px-lg-8 pb-5 pb-md-8">
-            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8 link-hover">
+            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8">
               Герасименко <br>
               Александра Васильевна
             </div>
@@ -257,13 +257,13 @@
         </div>
       </div>
       <div class="grid-col-lg-4 grid-col-md-6 grid-col-12">
-        <div class="card h-100 link-hover-wrapper waved">
+        <div class="card h-100 waved">
           <div class="card-img image--box progress-container bg-l2">
             <div class="progress progress-circle"></div>
             <img src="assets/img/scientists-3.png" alt="">
           </div>
           <div class="card-content pt-3 pt-md-5 px-2 px-md-4 px-lg-8 pb-5 pb-md-8">
-            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8 link-hover">
+            <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3 mb-lg-8">
               Галушко <br>
               Петр Митрофанович
             </div>
@@ -338,17 +338,17 @@
 
     <div class="grid grid-spacing-lg-9 mb-8">
       <div class="grid-col-8">
-        <a href="https://picsum.photos/1920/1080?random=11" data-fancybox="gallery-1"
+        <a href="assets/img/history-img-1.jpg" data-fancybox="gallery-1"
           class="image image--hover image--rect waved brs-1 bg-l1 progress-container h-100">
           <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=11" alt="">
+          <img src="assets/img/history-3.png" alt="">
         </a>
       </div>
       <div class="grid-col-4">
-        <a href="https://picsum.photos/1920/1080?random=12" data-fancybox="gallery-1"
+        <a href="assets/img/history-img-2.jpg" data-fancybox="gallery-1"
           class="image image--hover image--rect waved brs-1 bg-l1 progress-container h-100">
           <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=12" alt="">
+          <img src="assets/img/history-4.png" alt="">
         </a>
       </div>
     </div>
