--- a/contacts.html
+++ b/contacts.html
@@ -245,7 +245,27 @@
 					</div>
 				</div>
 				<div class="contacts-soc mt-8">
-					<button class="soc__item btn btn--yellow btn-icon">
+					<a class="contacts-soc__link bg-l1 brs-1 px-2 py-5" href="https://vk.com/id656276758" target="_blank">
+						<img class="contacts-soc__image icon te mb-2 text text-h2" src="assets/img/icons/cont-vk.svg" alt="">
+						<span class="contacts-soc__text text text--bold">Вконтакте</span>
+					</a>
+					<a class="contacts-soc__link bg-l1 brs-1 px-2 py-5" href="https://www.youtube.com/channel/UCPuxh0YEsh72uLLN59C0uBw" target="_blank">
+						<img class="contacts-soc__image icon te mb-2 text text-h2" src="assets/img/icons/cont-yt.svg" alt="">
+						<span class="contacts-soc__text text text--bold">Youtube</span>
+					</a>
+					<a class="contacts-soc__link bg-l1 brs-1 px-2 py-5" href="https://ok.ru/profile/576284274574" target="_blank">
+						<img class="contacts-soc__image icon te mb-2 text text-h2" src="assets/img/icons/cont-ok.svg" alt="">
+						<span class="contacts-soc__text text text--bold">Профиль в ОК</span>
+					</a>
+					<a class="contacts-soc__link bg-l1 brs-1 px-2 py-5" href="https://ok.ru/group/53644018778254" target="_blank">
+						<img class="contacts-soc__image icon te mb-2 text text-h2" src="assets/img/icons/cont-ok.svg" alt="">
+						<span class="contacts-soc__text text text--bold">Группа в ОК</span>
+					</a>
+					<a class="contacts-soc__link bg-l1 brs-1 px-2 py-5" href="https://rutube.ru/channel/28968117/" target="_blank">
+						<img class="contacts-soc__image icon te mb-2 text text-h2" src="assets/img/icons/cont-ru.svg" alt="">
+						<span class="contacts-soc__text text text--bold">Rutube</span>
+					</a>
+					<!-- <button class="soc__item btn btn--yellow btn-icon">
 						<svg class="icon text-h2" style="color: #E98114;">
 							<use xlink:href="assets/img/icons.svg#soc-ok" />
 						</svg>
@@ -259,7 +279,7 @@
 						<svg class="icon text-h2" style="color: #2A76FD;">
 							<use xlink:href="assets/img/icons.svg#soc-vk" />
 						</svg>
-					</button>
+					</button> -->
 				</div>
 			</div>
 			<div class="grid-col-lg-6">
