--- a/exposition-detail.html
+++ b/exposition-detail.html
@@ -70,38 +70,33 @@
         </div>
         <div class="header-nav__inner">
 
-          <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0"
-            data-toggle-link="nav-popup-1">
+          <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0" data-toggle-link="nav-popup-1">
             Музей
             <svg class="icon fade-60 ml-2 text-small">
               <use xlink:href="assets/img/icons.svg#triangle-right" />
             </svg>
           </button>
-          <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8"
-            data-toggle-link="nav-popup-2">
+          <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8" data-toggle-link="nav-popup-2">
             Что посмотреть
             <svg class="icon fade-60 ml-2 text-small">
               <use xlink:href="assets/img/icons.svg#triangle-right" />
             </svg>
           </button>
           <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8">Новости</button>
-          <button
-            class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8">Посетителям</button>
+          <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8">Посетителям</button>
           <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 mb-lg-0 ml-lg-8">Медиа</button>
 
           <div class="header-nav__popup">
             <div class="header-nav__popup-inner" id="nav-popup-1">
               <div class="header-nav__popup-list">
-                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none"
-                  data-toggle-link="nav-popup-1">
+                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none" data-toggle-link="nav-popup-1">
                   <svg class="icon fade-60 mr-2 text-small">
                     <use xlink:href="assets/img/icons.svg#to-left" />
                   </svg>
                   Музей
 
                 </button>
-                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4"
-                  data-toggle-link="nav-popup-1-1">
+                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4" data-toggle-link="nav-popup-1-1">
                   Музей для
                   <svg class="icon fade-60 ml-2 text-small">
                     <use xlink:href="assets/img/icons.svg#triangle-right" />
@@ -113,8 +108,7 @@
               </div>
 
               <div class="header-nav__popup-sub " id="nav-popup-1-1">
-                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none"
-                  data-toggle-link="nav-popup-1-1">
+                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none" data-toggle-link="nav-popup-1-1">
                   <svg class="icon fade-60 mr-2 text-small">
                     <use xlink:href="assets/img/icons.svg#to-left" />
                   </svg>
@@ -144,8 +138,7 @@
             </div>
             <div class="header-nav__popup-inner" id="nav-popup-2">
               <div class="header-nav__popup-list">
-                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none"
-                  data-toggle-link="nav-popup-2">
+                <button class="header-nav__item link-hover btn btn--primary btn--link mb-4 d-lg-none" data-toggle-link="nav-popup-2">
                   <svg class="icon fade-60 mr-2 text-small">
                     <use xlink:href="assets/img/icons.svg#to-left" />
                   </svg>
@@ -247,34 +240,131 @@
 
     <div class="grid grid-spacing-lg-9">
       <div class="grid-col-6 grid-col-lg-4">
-        <a href="https://www.youtube.com/watch?v=REg6q5ObbUs" data-fancybox="galleryId" class="image image--rect progress-container bg-l1 brs-1 waved">
+        <a href="https://www.youtube.com/watch?v=VOPZf3zWceo" data-fancybox="galleryId" class="image image--rect progress-container bg-l1 brs-1 waved">
           <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=11" alt="">
+          <img src="assets/img/test.gif" alt="">
           <div class="card-center-control">
             <button class="btn btn-large btn-fab btn--primary btn--white-bg">
-              <svg class="icon"><use xlink:href="assets/img/icons.svg#play" /></svg>
+              <svg class="icon">
+                <use xlink:href="assets/img/icons.svg#play" />
+              </svg>
             </button>
           </div>
         </a>
       </div>
       <div class="grid-col-6 grid-col-lg-4">
-        <a href="https://picsum.photos/1920/1080?random=12" data-fancybox="galleryId" class="image image--rect progress-container bg-l1 brs-1 waved">
-          <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=12" alt="">
-        </a>
+        <div class="exposition-detail-image-wrapper image image--rect" data-toggle-cover data-toggle-static>
+          <a href="assets/img/test.gif" data-fancybox="galleryId" class="exposition-detail-image">
+            <div class="exposition-detail-image-image image image--rect progress-container bg-l1 brs-1 waved">
+              <div class="progress progress-circle"></div>
+              <img src="assets/img/test.gif" alt="">
+            </div>
+            <div class="exposition-detail-image-content">
+              <div class="text-small text-md-body-1">Семейная карточка.</div>
+              <div class="mt-1 mt-md-2 fade-60 text-small-1 text-md-small lh-1-5 exposition-detail-image-text">
+                В центре за столом -В.П.Дамаев. Слева от него жена Ульяна Евдокимовна,справа - первая учительница В.Дамаева Татьяна Максимовна Сапежко, сидят две няни и се дети.
+              </div>
+            </div>
+          </a>
+          <button class="btn btn--link btn--primary text-small mt-1 exposition-detail-image-show" data-toggle-link>
+            <span class="active-disabled">Читать дальше...</span>
+            <span class="active-enabled">Скрыть</span>
+          </button>
+        </div>
+
       </div>
       <div class="grid-col-6 grid-col-lg-4">
-        <a href="https://picsum.photos/1920/1080?random=13" data-fancybox="galleryId" class="image image--rect progress-container bg-l1 brs-1 waved">
-          <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=13" alt="">
-        </a>
+        <div class="exposition-detail-image-wrapper image image--rect" data-toggle-cover data-toggle-static>
+          <a href="assets/img/test.gif" data-fancybox="galleryId" class="exposition-detail-image">
+            <div class="exposition-detail-image-image image image--rect progress-container bg-l1 brs-1 waved">
+              <div class="progress progress-circle"></div>
+              <img src="assets/img/test.gif" alt="">
+            </div>
+            <div class="exposition-detail-image-content">
+              <div class="text-small text-md-body-1">
+                Фото для выставки
+                ”Мой адрес - Советский Союз
+              </div>
+            </div>
+          </a>
+        </div>
+
       </div>
       <div class="grid-col-6 grid-col-lg-4">
-        <a href="https://picsum.photos/1920/1080?random=14" data-fancybox="galleryId" class="image image--rect progress-container bg-l1 brs-1 waved">
-          <div class="progress progress-circle"></div>
-          <img src="https://picsum.photos/600/400?random=14" alt="">
-        </a>
+        <div class="exposition-detail-image-wrapper image image--rect" data-toggle-cover data-toggle-static>
+          <a href="assets/img/test.gif" data-fancybox="galleryId" class="exposition-detail-image">
+            <div class="exposition-detail-image-image image image--rect progress-container bg-l1 brs-1 waved">
+              <div class="progress progress-circle"></div>
+              <img src="assets/img/test.gif" alt="">
+            </div>
+            <div class="exposition-detail-image-content">
+              <div class="text-small text-md-body-1">Семейная карточка.</div>
+              <div class="mt-1 mt-md-2 fade-60 text-small-1 text-md-small lh-1-5 exposition-detail-image-text">
+                В центре за столом -В.П.Дамаев. Слева от него жена Ульяна Евдокимовна,справа - первая учительница В.Дамаева Татьяна Максимовна Сапежко, сидят две няни и се дети.
+              </div>
+            </div>
+          </a>
+          <button class="btn btn--link btn--primary text-small mt-1 exposition-detail-image-show" data-toggle-link>
+            <span class="active-disabled">Читать дальше...</span>
+            <span class="active-enabled">Скрыть</span>
+          </button>
+        </div>
+
       </div>
+   
     </div>
   </section>
+
+
+  <div class="map progress-container">
+    <div class="progress progress-circle"></div>
+    <div class="map-inner " id="index-map">
+
+    </div>
+  </div>
+
+  <script>
+    (() => {
+      const init = () => {
+        ymaps.ready(function() {
+          var myMap = new ymaps.Map('index-map', {
+            center: [45.035012, 38.960149],
+            zoom: 17,
+            controls: ['zoomControl']
+          });
+
+          MyIconContentLayout = ymaps.templateLayoutFactory.createClass();
+
+          myPlacemark = new ymaps.Placemark([45.035012, 38.960149], {
+            balloonContent: ``
+          }, {
+            iconLayout: 'default#image',
+            iconImageHref: 'assets/img/map-marker.svg',
+            iconImageSize: [70, 84],
+            iconImageOffset: [-35, -42]
+          });
+
+          myMap.geoObjects.add(myPlacemark)
+          myMap.behaviors.disable('scrollZoom')
+        });
+      }
+
+
+      document.addEventListener('scroll', () => {
+        if (typeof ymaps == typeof undefined) {
+          const script = document.createElement('script')
+          script.src = 'https://api-maps.yandex.ru/2.1/?lang=ru_RU'
+          document.body.appendChild(script)
+
+          script.onload = init
+        } else {
+          init()
+        }
+      }, {
+        once: true
+      })
+
+
+    })();
+  </script>
 </body>
