add video count

--- a/video.html
+++ b/video.html
@@ -210,6 +210,12 @@
             </div>
           </div>
           <div class="card-content pt-3 pt-md-5 px-2 px-md-4 px-lg-8 pb-3 pb-md-8">
+            <div class="video-count">
+              <svg class="icon">
+                <use xlink:href="assets/img/icons.svg#video-library" />
+              </svg>
+              66
+            </div>
             <div class="text-body-1 text-md-body-0 text--demibold font-alt mb-3  link-hover">
               Видеоотчет с экскурсии
             </div>
