--- a/index.html
+++ b/index.html
@@ -721,6 +721,8 @@
 					</svg>
 					<div class="text-body-1 ">museiotr@mail.ru</div>
 				</a>
+
+				<a href="https://stdkit.ru/" target="_blank" class="footer-dev">Разработка сайта: Студия К.И.Т.</a>
 			</div>
 		</footer>
 
