--- a/news.html
+++ b/news.html
@@ -193,6 +193,14 @@
   </div>
 
 
+  <section class="news-plug">
+    <div class="whatsee__title text-h4 text-md-h1 text-lg-h0 mb-4 font-alt gsap-scroll" data-animation="fadeInUp" >
+      На сегодня <br>
+      новостей нет  
+
+    </div>
+    <button class="btn btn--primary btn--fill mt-10" >Посмотреть расписание</button>
+  </section>
 
   <section class="section--whithtop-min">
     <div class="grid grid-spacing-lg-9">
