add new year theme

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 				<a href="/" class="header-logo">
 					<div class="header-logo__img">
 						<img src="assets/img/logo-img.png" alt="">
+						<!-- ! new year -->
+						<div class="header-logo-tree">
+							<img src="assets/img/christmas-tree.png" alt="">
+						</div>
 					</div>
 					<div class="header-logo__text">
 						<svg class="header-logo__title" width="225" height="50">
@@ -206,7 +210,7 @@
 
 
 		<!-- Что посмотреть -->
-		<section class="whatsee section--whithtop">
+		<section class="whatsee section--whithtop snowflakes-wrapper">
 			<div class="section__top">
 				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 mb-4 font-alt gsap-scroll" data-animation="fadeInUp">
 					Что посмотреть</div>
@@ -252,9 +256,22 @@
 					</div>
 				</div>
 			</div>
-		</section>
 
-		<section class="pushkin-card">
+			<!-- ! new year -->
+			<div class="snowflakes">
+				<svg class="icon snowflake snowflake-1">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
+				<svg class="icon snowflake snowflake-2">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
+				<svg class="icon snowflake snowflake-3">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
+			</div>
+			
+			<div style="height: 120px;"></div>
+			
 			<div class="pushkin-card__content">
 				<img class="pushkin-card__main" src="assets/img/pushkin-card.png" alt="">
 				<div class="pushkin-card__banner flex flex-align-center">
@@ -307,7 +324,7 @@
 
 
 		<!-- Посетителям -->
-		<section class="visitor section--whithtop">
+		<section class="visitor section--whithtop snowflakes-wrapper">
 			<div class="section__top gsap-scroll" data-animation="fadeInUp">
 				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 mb-4 font-alt">Посетителям</div>
 				<div class="whatsee__subtitle text-body-2 text-md-body-0 fade-60">
@@ -376,11 +393,22 @@
 					</div>
 				</div>
 			</div>
-		</section>
 
+			<!-- ! new year -->
+			<div class="snowflakes">
+				<svg class="icon snowflake snowflake-1">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
+				<svg class="icon snowflake snowflake-2">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
 
-		<!-- Медиа -->
-		<section class="media media-index">
+			</div>
+		<!-- </section>
+
+		<section class="media media-index"> -->
+			<div style="height: 120px;"></div>
+
 			<div class="section__top">
 				<div class="whatsee__title text-h4 text-md-h1 text-lg-h0 font-alt gsap-scroll" data-animation="fadeInLeft">Медиа
 				</div>
@@ -722,6 +750,18 @@
 				</a>
 
 				<a href="https://stdkit.ru/" target="_blank" class="footer-dev">Разработка сайта: Студия К.И.Т.</a>
+			</div>
+
+			<!-- ! new year -->
+			<div class="footer-snowflake footer-snowflake-1">
+				<svg class="icon">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
+			</div>
+			<div class="footer-snowflake footer-snowflake-2">
+				<svg class="icon">
+					<use xlink:href="assets/img/icons.svg#snowflake" />
+				</svg>
 			</div>
 		</footer>
 
